saas/k8s/Demo8-ML-Cybersecurity/k8s/jupyter-notebook.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jupyter-notebook
  labels:
    app: jupyter-notebook

spec:
  containers:
  - name: jupyter-notebook
    image: davarski/jupyterlab-eth:latest
    imagePullPolicy: Always
    command: ["jupyter", "lab", "--ip", "0.0.0.0"]
  
  restartPolicy: Always
