saas/k8s/Demo8-ML-Cybersecurity/k8s/jupyter-notebook.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-notebook

spec:
  clusterIP: None
  selector:
    app: jupyter-notebook
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
